crates/contextdb-core/tests/fixtures/compile_fail/assign_u64_to_lsn.rs
use contextdb_core::Lsn;

fn main() {
    let x: u64 = 42;
    let _l: Lsn = x;
}
